--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 
+:root{
+font-family: Poppins;
+font-weight: 500;
+font-size: 14px;
+line-height: 22.53px;
+letter-spacing: 0px;
+}
